# Exercise

./: README.md  mysql1.session.sql
.history/: mysql1.session_20241105164750.sql
.history/TypeScript/: Arrays_20241114155915.ts
.history/doc/: 1_20241105140353.txt  1_20241105172707.md  1_20241105172711.md  1_20241105172919.md  1_20241105173040.md  1_20241105173306.md  1_20241105173542.md  1_20241105173554.txt  1_20241105173638.md  1_20241105185503.md  1_20241106163927.txt
Algorithms/src/: Input.java  Main.java  Prime.java
DataStruct/: CMakeLists.txt
DataStructC/: CMakeLists.txt  main.c
DataStructC++/: CMakeLists.txt
DataStructC++/21C++/: auto.cpp  caputechar.cpp  enum.cpp  float.cpp  functionReturnData.c++  inlinefunction.cpp  lambda.cpp  sizeof.cpp  std.c++  stdin.cpp  string.cpp  switch.cpp  typedef.cpp
DataStructC++/C++11/: Atomic.cpp  AutoPointer.cpp  ConfusedContainer.cpp  HighArrayPointer.cpp  Highpointer.cpp  Lambda.cpp  SFINAETemplate.cpp  SmartPointer.cpp  Smart_Ptr.cpp  Template.cpp  TemplateClass.cpp  TemplateComputing.cpp  Using.cpp  VarTemplate.cpp  sp.cpp  (+5 more)
DataStructC/base/: input.c  input1.c  pointer.c
DataStructC/struct/: SqList.c  kmp.c
TypeScript/: 1.js  Arrays.ts  Generic.ts  RMB.ts  VsCode运行ts文件_vscode tsx-CSDN博客.md  base.ts  class1.ts  fetch.md  fetch.ts  map.ts  object.ts  package-lock.json  thread.ts  tsconfig.json.json  url.ts  zhengce.ts  zifuCode.ts
cangjie/: 1.ts
doc/: 1.js  1.md  1.txt  VsCode运行ts文件_vscode tsx-CSDN博客.md  md.md
harmony/: home.ets  savePic.ts
kotlin/: kotlin.kt
python/: NLP.py  python.py  sort.py
(+53 files in other folders)
